# NAMICExternalProjects

./: .SuperBuild.cmake.swp  .gitignore  CMakeCache.txt  CMakeLists.txt  Common.cmake  NAMICExternalProjects.cmake  README.md  SuperBuild.cmake  project.config
CMake/: FindDCMTK.cmake  NAMICExternalProjectsExternalData.cmake
SuperBuild/: External_ANTs.cmake  External_BRAINSTools.cmake  External_BatchMake.cmake  External_Boost.cmake  External_Boost_buildboost.cmake  External_CTKAPPLAUNCHER.cmake  External_Cppcheck.cmake  External_DCMTK.cmake  External_DTIPrep.cmake  External_DTIProcess.cmake  External_DTIReg.cmake  External_DTI_Tract_Stat.cmake  External_DoubleConvert.cmake  External_Eigen.cmake  External_GDCM.cmake  External_ITKv4.cmake  External_ITKv4.cmake.orig  External_ITKv5.cmake  External_Ipopt.cmake  External_JPEG.cmake  External_KWStyle.cmake  External_LogSymmetricDemons.cmake  External_MRParameterMaps.cmake  External_MultiAtlas.cmake  External_NIPYPE.cmake  External_OpenCV.cmake  External_OpenJPEG.cmake  External_PCRE.cmake  External_QWT.cmake  External_ReferenceAtlas.cmake  External_SimpleITK.cmake  External_SlicerExecutionModel.cmake  External_SlicerJointRicianAnisotropicLMMSEFilter.cmake  External_Swig.cmake  External_Swig_configure_step.cmake.in  External_Swig_patch_step.cmake.in  External_TIFF.cmake  External_Template.cmake  External_UKF.cmake  External_UnbiasedNonLocalMeans.cmake  (+14 more)
Utilities/: SetupForDevelopment.sh
Utilities/BuildScripts/: MakeNEP.sh  README.md  SetUpDarwin20150704.sh  SetUpNeon20150704.sh
Utilities/Hooks/: prepare-commit-msg
src/: CMakeLists.txt
